<resources>

    <string name="app_name">EyeWay</string>
    <string name="defaut">Default text </string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Eye Way</string>
    <string name="realiteAugmente"> Réalité augmentée</string>
    <string name="map"> Map </string>
    <string name="fouille">Fouille de données</string>
    <string name="title_activity_realite_augmente">RealiteAugmente</string>
    <string name="title_activity_map">Act. Map</string>
    <string name="title_activity_fouille_donnee">Act. Fouille De Donnee</string>
    <string name="title_activity_menu_principal">Act. MenuPrincipal</string>
    <string name="descriptionPopPup"> Description </string>
    <string name="descriptionImagePopPup">icon</string>
    <string name="distancePopPup">Distance </string>
    <string name="linterface">Interface</string>
    <string name="adresse">Adresse </string>
    <string name="nom">Nom</string>
    <string name="gps_status_offline">Gps inactif</string>
    <string name="gps_status_online">Gps actif</string>
    <string name="titre_menu_principal">Menu principal :</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_test_fouille">TestFouille</string>
    <string name="title_activity_fouille_test">FouilleTest</string>
        <string name="titre_recherche_perimetre">Recherche dans un périmetre</string>
    <string name="title_activity_recherche_perimetre">RecherchePerimetre</string>
    <string name="titre_choix_position">Centre du perimetre</string>
	<string name="titre_distance">Distance de recherche</string>
	<string name="titre_ajout_type">Types de lieu</string>
	 <string name="bouton_ajout_type">Ajouter</string>
	<string name="action_rechercher">Rechercher</string>

	
	<string-array name="array_choix_position">
        <item>Autour de ma position</item>
        <item>Autour d\'une autre position</item>
    </string-array>
	 <string-array name="array_type">
        <item>accounting</item>
		<item>airport</item>
		<item>amusement_park</item>
		<item>aquarium</item>
		<item>art_gallery</item>
		<item>atm</item>
		<item>bakery</item>
		<item>bank</item>
		<item>bar</item>
		<item>beauty_salon</item>
		<item>bicycle_store</item>
		<item>book_store</item>
		<item>bowling_alley</item>
		<item>bus_station</item>
		<item>cafe</item>
		<item>campground</item>
		<item>car_dealer</item>
		<item>car_rental</item>
		<item>car_repair</item>
		<item>car_wash</item>
		<item>casino</item>
		<item>cemetery</item>
		<item>church</item>
		<item>city_hall</item>
		<item>clothing_store</item>
		<item>convenience_store</item>
		<item>courthouse</item>
		<item>dentist</item>
		<item>department_store</item>
		<item>doctor</item>
		<item>electrician</item>
		<item>electronics_store</item>
		<item>embassy</item>
		<item>establishment</item>
		<item>finance</item>
		<item>fire_station</item>
		<item>florist</item>
		<item>food</item>
		<item>funeral_home</item>
		<item>furniture_store</item>
		<item>gas_station</item>
		<item>general_contractor</item>
		<item>grocery_or_supermarket</item>
		<item>gym</item>
		<item>hair_care</item>
		<item>hardware_store</item>
		<item>health</item>
		<item>hindu_temple</item>
		<item>home_goods_store</item>
		<item>hospital</item>
		<item>insurance_agency</item>
		<item>jewelry_store</item>
		<item>laundry</item>
		<item>lawyer</item>
		<item>library</item>
		<item>liquor_store</item>
		<item>local_government_office</item>
		<item>locksmith</item>
		<item>lodging</item>
		<item>meal_delivery</item>
		<item>meal_takeaway</item>
		<item>mosque</item>
		<item>movie_rental</item>
		<item>movie_theater</item>
		<item>moving_company</item>
		<item>museum</item>
		<item>night_club</item>
		<item>painter</item>
		<item>park</item>
		<item>parking</item>
		<item>pet_store</item>
		<item>pharmacy</item>
		<item>physiotherapist</item>
		<item>place_of_worship</item>
		<item>plumber</item>
		<item>police</item>
		<item>post_office</item>
		<item>real_estate_agency</item>
		<item>restaurant</item>
		<item>roofing_contractor</item>
		<item>rv_park</item>
		<item>school</item>
		<item>shoe_store</item>
		<item>shopping_mall</item>
		<item>spa</item>
		<item>stadium</item>
		<item>storage</item>
		<item>store</item>
		<item>subway_station</item>
		<item>synagogue</item>
		<item>taxi_stand</item>
		<item>train_station</item>
		<item>travel_agency</item>
		<item>university</item>
		<item>veterinary_care</item>>
		<item>zoo</item>
    </string-array>
</resources>