<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

      <Button
        android:id="@+id/realite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/realiteAugmente" 
        android:onClick="onClickRealite"
        />
      
         <Button
        android:id="@+id/map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map"
        android:clickable="true"
        android:onClick="onClickMap"
         />
         
          <Button
        android:id="@+id/fouille"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/fouille" 
        android:clickable="true"
        android:onClick="onClickFouille"
        />

</LinearLayout>
