<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:orientation="vertical"
	android:background="@drawable/background_application" 
	>

    <include
        android:id="@+id/titlebar"
        layout="@layout/titlebar" />

        <TextView
            android:id="@+id/titre_recherche_perimetre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titre_recherche_perimetre"
            android:textColor="#5440A4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/texte_choix_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="100dp"
                android:text="@string/titre_choix_position" />

            <Spinner
                android:id="@+id/spinner_choix_position"
                android:layout_width="200dip"
                android:layout_height="wrap_content"
                android:entries="@array/array_choix_position" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/texte_distance"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/titre_distance" />
            <!-- Impossible de definir une max width en pourcentage de la width totale ... -->

            <EditText
                android:id="@+id/editText1"
                android:layout_width="200dip"
                android:layout_height="wrap_content"
                android:hint="distance en mètre du rayon"
                android:inputType="number"
                android:nextFocusLeft="@id/editText1"
                android:nextFocusUp="@id/editText1" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/texte_ajout_type"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/titre_ajout_type" />

            <Spinner
                android:id="@+id/spinner_selection_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="false" />

            <Button
                android:id="@+id/bouton_ajout_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bouton_ajout_type" />
        </LinearLayout>
        
        
    
        
         <ListView
            android:id="@+id/liste_types"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:divider="#A3B5FB"
            android:dividerHeight="1dip"
            android:drawSelectorOnTop="false"
            android:headerDividersEnabled="true"
            android:overScrollHeader="#F7F2B2" >
        </ListView>

        <Button
            android:id="@+id/bouton_validation_formulaire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/action_rechercher" />
        

</LinearLayout>