<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_perimetre"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <include
        android:id="@+id/titlebar"
        layout="@layout/titlebar" />

    <Button
        android:id="@+id/bouton_validation_formulaire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:text="@string/action_rechercher" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/bouton_validation_formulaire"
        android:layout_below="@id/titlebar"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp" >

        <RelativeLayout
            android:id="@+id/relative1"
            android:layout_width="fill_parent"
            android:layout_below="@id/titlebar"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/titre_recherche_perimetre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/titre_recherche_perimetre"
                android:textColor="#000000"
                android:textSize="22sp" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_margin="4dp"
                android:layout_toLeftOf="@id/titre_recherche_perimetre"
                android:src="@drawable/menu_recherche_dans_zone"
                android:contentDescription="@string/descriptionImagePopPup" />
        </RelativeLayout>

        <EditText
            android:id="@+id/editText1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relative1"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:hint="@string/text_distance"
            android:inputType="number" >
        </EditText>

        <Spinner
            android:id="@+id/spinner_selection_type"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText1"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:singleLine="false" />

        <Button
            android:id="@+id/bouton_ajout_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/spinner_selection_type"
            android:layout_below="@id/spinner_selection_type"
            android:textSize="20sp"
            android:text="@string/bouton_ajout_type" />

        <ListView
            android:id="@+id/liste_types"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bouton_ajout_type"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:divider="#A3B5FB"
            android:dividerHeight="1dip"
            android:drawSelectorOnTop="false"
            android:headerDividersEnabled="true"
            android:overScrollHeader="#F7F2B2"
            android:padding="4dp" >
        </ListView>
    </RelativeLayout>

</RelativeLayout>